parser/metamodel/src/test/data/errors/Views.mm.merr
File: parser/metamodel/src/test/data/badModels/tekgenesis/sales/Views.mm
(25, 6): Invalid field name  'id'
(20, 6): Field not found or illegal: 'id' in type: 'Category'
(36, 6): Remote view NonSearcheableView is of entity views.NonSearcheable which is not remotable nor searchable
(40, 6): Remote view ProductSqlView has 'as' option defined
(45, 4): View ProductSqlView2 has an index defined
(52, 23): Could not find remote view for entity 'views.Category' referenced from  'category'
(52, 23): Could not find remote view for entity 'views.Category' referenced from  'category'
